--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 .login-page {
-  width: 360px;
+  /* width: 360px; */
   padding: 8% 0 0;
   margin: auto;
 }
@@ -12,7 +12,7 @@
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
-  text-align: center;
+  /* text-align: center; */
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .form input {
@@ -25,6 +25,10 @@
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
+}
+.form input[type='radio'] {
+  width: auto;
+  margin: 15px;
 }
 .form button {
   font-family: "Roboto", sans-serif;
